# awsswapper

./: README.md  pyproject.toml
awsswapper/: __init__.py
