[tool.poetry]
name = "awsswapper"
version = "0.2.0"
description = ""
authors = ["Willem Thiart <himself@willemthiart.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.75"
cliar = "^1.3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
awsswapper = "awsswapper:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

